--- a/component.css
+++ b/component.css
@@ -1,3 +1,16 @@
-body {
+.teste{
   background-color: cadetblue;
+}
+.fieldset-login{
+    width: 500px;
+    height: 100px;
+    border: none;
+    margin-left: 500px;
+    margin-top: 250px
+}
+.div-button-login{
+    margin-left: 120px;
+}
+.button-login{
+    border-color: red;
 }
