--- a/view/paginaInicial/paginaInicial.html
+++ b/view/paginaInicial/paginaInicial.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" 
-              href="../component.css" media="screen" />
+              href="../../public/css/component.css" media="screen" />
     </head>
     <body class="teste">
         <div>Usuário Logado</div>
