Arrumando arquivos css e js parte 2

--- a/view/login/login.html
+++ b/view/login/login.html
@@ -6,29 +6,27 @@
 
 <!DOCTYPE html><html class='' lang="pt-br">
 <head>
-    <!---<script src='//production-assets.codepen.io/assets/editor/live/console_runner-079c09a0e3b9ff743e39ee2d5637b9216b3545af0de366d4b9aad9dc87e26bfd.js'></script>
-        -->
+    <!--<script src='//production-assets.codepen.io/assets/editor/live/console_runner-079c09a0e3b9ff743e39ee2d5637b9216b3545af0de366d4b9aad9dc87e26bfd.js'></script>-->
+   
     <meta charset='UTF-8'>
     <meta name="robots" content="noindex">
-    <script src='../../public/js/events_runner.js'></script>
-    <script src='../../public/js/css_live_reload_init.js'></script>
     
-    <link rel="shortcut icon" type="image/x-icon" href="//production-assets.codepen.io/assets/favicon/favicon-8ea04875e70c4b0bb41da869e81236e54394d63638a1ef12fa558a4a835f1164.ico" />
-    <link rel="mask-icon" type="" href="//production-assets.codepen.io/assets/favicon/logo-pin-f2d2b6d2c61838f7e76325261b7195c27224080bc099486ddd6dccb469b8e8e6.svg" color="#111" />
-    <link rel="canonical" href="https://codepen.io/dpinnick/pen/LjdLmo?limit=all&page=21&q=service" /> 
+    <script type="text/javascript" src="../../public/js/css_live_reload_init.js"></script>
     
-    <script src="../../public/js/jquery-1.11.1.min.js"></script>
-    <link href="../../public/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="../../public/js/bootstrap.min.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="../../public/imgs/faviconAba.ico" />
+    <link rel="mask-icon" type="" href="../../public/imgs/logo-pin.svg" color="#111" />
+    
+    <script type="text/javascript" src="../../public/js/bootstrap.min.js"></script>
     <link rel='stylesheet prefetch' href=''>
     <link rel="stylesheet" href="../../public/css/login.css">
-    <style class="cp-pen-styles">
-    </style>
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link rel="stylesheet" href="../../public/css/component.css" type="text/css"/>
-
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <style class="cp-pen-styles"></style>
+    
+    <!--<link rel="canonical" href="https://codepen.io/dpinnick/pen/LjdLmo?limit=all&page=21&q=service" />-->
+    <!--<script type="text/javascript" src="../../public/js/jquery-1.11.1.min.js"></script>-->
+    <!--<link href="../../public/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">-->
+    <!--<link rel="stylesheet" href="../../public/css/component.css" type="text/css"/>-->
+    <!--<script type="text/javascript" src="../../public/js/events_runner.js"></script>-->
+  
 </head>
 <body>
         <!-- LOGIN MODULE -->
@@ -96,7 +94,7 @@
                 <div class="content">
                     <!-- LOGO -->
                     <div class="logo">
-                        <a href="#"><img src="https://res.cloudinary.com/dpcloudinary/image/upload/v1506186248/logo.png" alt=""></a>
+                        <a href="#"><img src="../../public/imgs/logo.png" alt=""></a>
                     </div>
                     <!-- SLIDESHOW -->
                     <div id="slideshow">
@@ -167,8 +165,8 @@
             </div>
         </div>
       
-<script src="../../public/js/stopExecutionOnTimeout.js"></script>
-<script src='../../public/js/jquery.min.js'></script>
-<script src="../../public/js/loginJs.js">
+<script type="text/javascript" src="../../public/js/stopExecutionOnTimeout.js"></script>
+<script type="text/javascript" src='../../public/js/jquery.min.js'></script>
+<script type="text/javascript" src="../../public/js/loginJs.js">
 </script>
 </body></html>
