--- a/view/login/login.html
+++ b/view/login/login.html
@@ -132,14 +132,14 @@
                         <!-- TABS CONTENT -->
                     	<div class="tabs-content">
                             <!-- TABS CONTENT LOGIN -->
-                            <form action="">
+                            <form class="login-form" method="POST" action="../../controller/loginBean.php">
                                 <div id="login-tab-content" class="active">
-                                    <form class="login-form" action="" method="post">
-                                        <input type="text" class="input" id="user_login" autocomplete="off" placeholder="Email ou nome de usuário">
-                                        <input type="password" class="input" id="user_pass" autocomplete="off" placeholder="Senha">
+                                    <form>
+                                        <input type="text" class="input" name="user_login" autocomplete="off" placeholder="Email ou nome de usuário">
+                                        <input type="password" class="input" name="user_pass" autocomplete="off" placeholder="Senha">
                                         <input type="checkbox" class="checkbox" checked id="remember_me">
                                         <label for="remember_me">Lembrar senha</label>
-                                        <input type="submit" class="button" value="Entrar">
+                                        <input type="submit" value="Entrar">
                                     </form>
                                     <div class="help-action">
                                         <p><i class="fa fa-arrow-left" aria-hidden="true"></i><a class="forgot" href="#">Esqueci a senha</a></p>
