projeto login, conexao

--- a/view/login/login.html
+++ b/view/login/login.html
@@ -76,12 +76,11 @@
                             <!-- TABS CONTENT LOGIN -->
                             <form class="login-form" method="POST" action="../../controller/loginBean.php">
                                 <div id="login-tab-content" class="active">
-                                    <form class="login-form" action="" method="post">
-                                        <input type="text" class="input" id="user_login" autocomplete="off" placeholder="Nome de usuário">
-                                        <input type="password" class="input" id="user_pass" autocomplete="off" placeholder="Senha">
-                                        <input type="submit" class="button" value="Entrar">
+                                    <form class="login-form">
+                                        <input type="text" class="input" name="user_login" autocomplete="off" placeholder="Nome de usuário">
+                                        <input type="password" class="input" name="user_pass" autocomplete="off" placeholder="Senha">
+                                        <input type="submit" value="Entrar">
                                     </form>
-                                   
                                 </div>
                             </form>
                             <!-- TABS CONTENT SIGNUP -->
