--- a/view/login/login.html
+++ b/view/login/login.html
@@ -68,16 +68,16 @@
                     <div class="form-wrap">
                         <!-- TABS -->
                     	<div class="tabs">
-                            <h3 class="login-tab"><a class="log-in active" href="#login-tab-content"><span>Entrar<span></a></h3>
+                            <h3 class="login-tab"><a class="log-in active" href="#login-tab-content"><span>Entrar</span></a></h3>
                     		<h3 class="signup-tab"><a class="sign-up" href="#signup-tab-content"><span>Cadastrar</span></a></h3>
                     	</div>
                         <!-- TABS CONTENT -->
                     	<div class="tabs-content">
                             <!-- TABS CONTENT LOGIN -->
-                            <form class="login-form" method="POST" action="../../controller/login.php">
+                            <form class="login-form" method="POST" action="../../controller/loginBean.php">
                                 <div id="login-tab-content" class="active">
                                     <form class="login-form">
-                                        <input type="text" class="input" name="user_login" autocomplete="off" placeholder="Nome de usuário">
+                                        <input type="text" class="input" name="user_login" autocomplete="off" placeholder="Nome de Usuário">
                                         <input type="password" class="input" name="user_pass" autocomplete="off" placeholder="Senha">
                                         <input type="submit" value="Entrar" name="entrar">
                                     </form>
@@ -85,7 +85,7 @@
                             </form>
                             <!-- TABS CONTENT SIGNUP -->
                     		<div id="signup-tab-content">
-                    			<form class="signup-form" method="POST" action="../../controller/login.php">
+                    			<form class="signup-form" method="POST" action="../../controller/loginBean.php">
                                             <input type="text" class="input" name="user_name" autocomplete="off" required="" placeholder="Nome de Usuário">
                     				<input type="password" class="input" name="user_pass" autocomplete="off" required="" placeholder="Senha">
                     				<input type="submit" name="cadastrar" value="Cadastrar">
