--- a/view/login/login.html
+++ b/view/login/login.html
@@ -44,20 +44,20 @@
                     <!-- SLIDESHOW -->
                     <div id="slideshow">
                         <div class="one">
-                            <h2><span>EVENTS</span></h2>
-                            <p>Sign up to attend any of hundreds of events nationwide</p>
+                            <h2><span>Eventos</span></h2>
+                            <p>Se inscreva e participe de diversos eventos tecnológicos ao redor do país.</p>
                         </div>
                         <div class="two">
-                            <h2><span>LEARNING</span></h2>
-                            <p>Thousands of instant online classes/tutorials included</p>
+                            <h2><span>Aprendizado</span></h2>
+                            <p>Tenha acesso a milhares de aulas e cursos online</p>
                         </div>
                         <div class="three">
-                            <h2><span>GROUPS</span></h2>
-                            <p>Create your own groups and connect with others that share your interests</p>
+                            <h2><span>Comunidade</span></h2>
+                            <p>Crie sua própria comunidade, compartilhe e tire dúvidas com outras pessoas.</p>
                         </div>
                         <div class="four">
-                            <h2><span>SHARING</span></h2>
-                            <p>Share your works and knowledge with the community on the public showcase section</p>
+                            <h2><span>Compartilhe</span></h2>
+                            <p>Compartilhes seus trabalhos e conhecimentos com outras pessoas para que possam contribuir.</p>
                         </div>
                     </div>
                 </div>
