--- a/view/cadastro/cadastro.html
+++ b/view/cadastro/cadastro.html
@@ -15,7 +15,7 @@
             <div class="signup-content">
                 
                 <div class="signup-form">
-                    <a href="../consulta/consulta.php"><input type="button" name="voltar" value="Voltar" class="submit"/></a>
+                    <a href="../consulta/consulta.php"><input type="button" name="voltar" value="Voltar" class="submit" id=""/></a>
                     <form method="POST" class="register-form" action="../../controller/cliente.php" id="register-form">
                         <h2>Terminar cadastro</h2>
                         <div class="form-row">
